added population data

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
           <span id="metricSelect"> Select the metric</span>
           <div class="">
             <select name="metric" id="metric" class="select-pure__select">
-              <option value="confirmed" selected>confirmed</option>
-              <option value="deaths">deaths</option>
-              <option value="recovered">recovered</option>
+              <option value="confirmed" selected>confirmed cases - total</option>
+              <option value="deaths">deaths - total</option>
+              <option value="recovered">recovered - total</option>
+              <option value="deaths/confirmed">deaths/confirmed</option>
+              <option value="confirmed/100K">confirmed/100.000</option>
+              <option value="deaths/100K">deaths/100.000</option>
             </select>
           </div>
         </div>
