--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap&subset=latin-ext"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -19,11 +21,12 @@
     <div class="banner-img"></div>
     <div class="banner-txt">
       <h1>Covid-19</h1>
-      <p>A simple take at visualizing the outbreak.</p>
+      <p>A simple take at visualizing the outbreak. Confirmed. Deaths. Recovered. Population.</p>
       <a href="http://www.freethrow.rs">freethrow.rs</a>
+      <p class="arrow"><a href="#viz"><i class="fa fa-arrow-down"></i></a></p>
     </div>
-    <div class="visualization">
-      <h3>Compare numbers</h3>
+    <div class="visualization" id="viz">
+      <h3>Compare numbers + Visualize</h3>
       <hr />
       <p>
         We are surrounded by visualizations of the COVID-19 spread, so I guess
@@ -56,7 +59,7 @@
     </div>
     <footer>
       <div class="container">
-      <h5>Freethrow 2020 amidst covid19</h5>
+      <h5><a href="http://www.freethrow.rs">Freethrow</a> 2020 amidst covid19</h5>
       <p>
         data analysis / visualizations / machine learning / web development
       </p>
