--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <p>
         data analysis / visualizations / machine learning / web development
       </p>
+      <p class="small">freethrowrs@gmail.com</p>
     </footer>
   </div>
   </body>
