Somewhat responsive, but hackish...

--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
     </div>
     <footer>
       <div class="container">
-      <h5><a href="http://www.freethrow.rs">Freethrow</a> 2020 amidst covid19</h5>
-      <p>
-        data analysis / visualizations / machine learning / web development
-      </p>
+      <p><a href="http://www.freethrow.rs">Freethrow</a> 2020 amidst covid19</p>
+
       <p class="small">freethrowrs@gmail.com</p>
+      <p class="small">
+        <a href="https://www.pexels.com/photo/grayscale-photo-of-window-1056469/">
+          Photo by Simon Matzinger from Pexels</a></p>
+          <p class="small">Built with <a href="https://www.chartjs.org/">Chart.js</a> </p>
     </footer>
   </div>
   </body>
